# golang-101

./: .gitignore  .golangci.yml  BUILD.bazel  MODULE.bazel  Makefile  README.md  WORKSPACE  go.mod  go.sum
.github/workflows/: pr.yaml
buffered-channel/: BUILD.bazel  main.go
complex-opentelemetry/app1/: BUILD.bazel  main.go
complex-opentelemetry/app2/: BUILD.bazel  main.go
complex-opentelemetry/app3/: BUILD.bazel  main.go
complex-workerpool/: BUILD.bazel  job.go  main.go  pool.go  pool_test.go  task.go  woker.go
concurrent-map/: BUILD.bazel  main.go  main_test.go
design-patterns/01-singleton/: BUILD.bazel  singleton.go
design-patterns/02-factory-method/: BUILD.bazel  factory_test.go
design-patterns/03-abstract-factory/: BUILD.bazel  components.go  factory.go  factory_test.go
design-patterns/04-builder/: BUILD.bazel  builder.go
design-patterns/behavioral/chainOfResponsibility/: BUILD.bazel  chain_test.go  concrete_handler.go  handler.go
design-patterns/behavioral/command/: BUILD.bazel  command.go  command_test.go  concrete_command.go  invoker.go  receiver.go
design-patterns/behavioral/interpreter/: BUILD.bazel  abstract_expression.go  interpreter.go  interpreter_test.go  nonterminal_expression.go  terminal_expression.go
design-patterns/behavioral/iterator/: BUILD.bazel  aggregate.go  concrete_aggregate.go  concrete_iterator.go  iterator.go  iterator_test.go
design-patterns/behavioral/mediator/: BUILD.bazel  colleague.go  concrete_colleague.go  concrete_mediator.go  mediator.go  mediator_test.go
design-patterns/behavioral/memento/: BUILD.bazel  caretaker.go  memento.go  memento_test.go  originator.go
design-patterns/behavioral/observer/: BUILD.bazel  observer.go  observer_test.go
design-patterns/behavioral/state/: BUILD.bazel  concrete_state.go  context.go  state.go  state_test.go
design-patterns/behavioral/strategy/: BUILD.bazel  strategy.go  strategy_test.go
design-patterns/behavioral/template-method/: BUILD.bazel  abstract.go  concrete.go  templatemethod_test.go
design-patterns/behavioral/visitor/: BUILD.bazel  concrete_element.go  concrete_visitor.go  element.go  visitor.go  visitor_test.go
design-patterns/creational/abstract-factory/: BUILD.bazel
design-patterns/creational/builder/: BUILD.bazel  builder_test.go
design-patterns/creational/factory-method/: BUILD.bazel  factory.go  shapes.go
design-patterns/creational/prototype/: BUILD.bazel  prototype.go  prototype_test.go
design-patterns/creational/singleton/: BUILD.bazel  singleton_test.go
design-patterns/structural/adapter/: BUILD.bazel  adapter.go  adapter_test.go
design-patterns/structural/bridge/: BUILD.bazel  bridge.go  bridge_test.go
design-patterns/structural/composite/: BUILD.bazel  composite.go  composite_test.go
design-patterns/structural/decorator/: BUILD.bazel  decorator.go  decorator_test.go
design-patterns/structural/facade/: BUILD.bazel  facade.go  facade_test.go
design-patterns/structural/flyweight/: BUILD.bazel  flyweight.go  flyweight_test.go
design-patterns/structural/proxy/: BUILD.bazel  proxy.go  proxy_test.go
job-queue/: BUILD.bazel  job.go  job_test.go
marketdata-condition/: BUILD.bazel  expression.go  main.go
pkg/otelx/: BUILD.bazel  otelx.go
pkg/storage/redix/: BUILD.bazel  client.go
pkg/stringx/: BUILD.bazel  base62.go  base62_test.go
pkg/timex/: BUILD.bazel  timex.go
rolldice/: BUILD.bazel  docker-compose.yaml  main.go  otel-collector.yaml  prometheus.yaml
shortener/: BUILD.bazel  main.go
simple-chat/: BUILD.bazel  main.go
simple-gorm-mariadb/: BUILD.bazel  main.go  model.go
simple-grpc/: BUILD.bazel  Makefile  buf.gen.yaml  buf.yaml  server.go  user.pb.go  user.proto  user_grpc.pb.go  user_grpc_mock.pb.go
simple-grpc/client/: BUILD.bazel  main.go
simple-grpc/pb/: BUILD.bazel  user.pb.go  user.proto  user_grpc.pb.go  user_grpc_mock.pb.go
simple-grpc/pb/pbconnect/: BUILD.bazel  user.connect.go
simple-grpc/server/: BUILD.bazel  main.go
simple-opentelemetry/: BUILD.bazel  main.go
simple-workerpool/: BUILD.bazel  job.go  main.go  pool.go  woker.go
start-empty-service/: main.go
task-process/: BUILD.bazel  main.go  step.go
ton-fullnode/: BUILD.bazel  main.go
unbeffered-channel/: BUILD.bazel  main.go
workerpool/: job.go  pool.go  woker.go
