load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "buffered-channel_lib",
    srcs = ["main.go"],
    importpath = "github.com/blackhorseya/golang-101/buffered-channel",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "buffered-channel",
    embed = [":buffered-channel_lib"],
    visibility = ["//visibility:public"],
)
