load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "complex-workerpool_lib",
    srcs = [
        "main.go",
        "pool.go",
        "task.go",
        "woker.go",
    ],
    importpath = "github.com/blackhorseya/golang-101/complex-workerpool",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "complex-workerpool",
    embed = [":complex-workerpool_lib"],
    visibility = ["//visibility:public"],
)
