load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "complex-workerpool_lib",
    srcs = [
        "job.go",
        "main.go",
        "pool.go",
        "woker.go",
    ],
    importpath = "github.com/blackhorseya/golang-101/complex-workerpool",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "complex-workerpool",
    embed = [":complex-workerpool_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "complex-workerpool_test",
    srcs = ["pool_test.go"],
    embed = [":complex-workerpool_lib"],
)
