load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "concurrent-map_lib",
    srcs = ["main.go"],
    importpath = "github.com/blackhorseya/golang-101/concurrent-map",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "concurrent-map",
    embed = [":concurrent-map_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "concurrent-map_test",
    srcs = ["main_test.go"],
    embed = [":concurrent-map_lib"],
)
