load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "rolldice_lib",
    srcs = ["main.go"],
    importpath = "github.com/blackhorseya/golang-101/rolldice",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/otelx",
        "@com_github_gin_gonic_gin//:gin",
        "@io_opentelemetry_go_contrib_instrumentation_github_com_gin_gonic_gin_otelgin//:otelgin",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel_metric//:metric",
        "@io_opentelemetry_go_otel_trace//:trace",
    ],
)

go_binary(
    name = "rolldice",
    embed = [":rolldice_lib"],
    visibility = ["//visibility:public"],
)
