load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "shortener_lib",
    srcs = ["main.go"],
    importpath = "github.com/blackhorseya/golang-101/shortener",
    visibility = ["//visibility:private"],
    deps = ["@com_github_gin_gonic_gin//:gin"],
)

go_binary(
    name = "shortener",
    embed = [":shortener_lib"],
    visibility = ["//visibility:public"],
)
