load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "simple-chat_lib",
    srcs = ["main.go"],
    importpath = "github.com/blackhorseya/golang-101/simple-chat",
    visibility = ["//visibility:private"],
    deps = ["@com_github_redis_go_redis_v9//:go-redis"],
)

go_binary(
    name = "simple-chat",
    embed = [":simple-chat_lib"],
    visibility = ["//visibility:public"],
)
