load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "simple-gorm-mariadb_lib",
    srcs = [
        "main.go",
        "model.go",
    ],
    importpath = "github.com/blackhorseya/golang-101/simple-gorm-mariadb",
    visibility = ["//visibility:private"],
    deps = [
        "@io_gorm_driver_mysql//:mysql",
        "@io_gorm_gorm//:gorm",
    ],
)

go_binary(
    name = "simple-gorm-mariadb",
    embed = [":simple-gorm-mariadb_lib"],
    visibility = ["//visibility:public"],
)
