load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "simple-grpc",
    srcs = [
        "user.pb.go",
        "user_grpc.pb.go",
        "user_grpc_mock.pb.go",
    ],
    importpath = "github.com/blackhorseya/golang-101/simple-grpc",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
        "@org_uber_go_mock//gomock",
    ],
)
