load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "simple-grpc_lib",
    srcs = [
        "client.go",
        "server.go",
    ],
    importpath = "github.com/blackhorseya/golang-101/simple-grpc",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "simple-grpc",
    embed = [":simple-grpc_lib"],
    visibility = ["//visibility:public"],
)
