load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "simple-opentelemetry_lib",
    srcs = ["main.go"],
    importpath = "github.com/blackhorseya/golang-101/simple-opentelemetry",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "simple-opentelemetry",
    embed = [":simple-opentelemetry_lib"],
    visibility = ["//visibility:public"],
)
