load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "simple-workerpool_lib",
    srcs = [
        "job.go",
        "main.go",
        "pool.go",
        "woker.go",
    ],
    importpath = "github.com/blackhorseya/golang-101/simple-workerpool",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "simple-workerpool",
    embed = [":simple-workerpool_lib"],
    visibility = ["//visibility:public"],
)
