load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "ton-fullnode_lib",
    srcs = ["main.go"],
    importpath = "github.com/blackhorseya/golang-101/ton-fullnode",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_xssnick_tonutils_go//liteclient",
        "@com_github_xssnick_tonutils_go//ton",
    ],
)

go_binary(
    name = "ton-fullnode",
    embed = [":ton-fullnode_lib"],
    visibility = ["//visibility:public"],
)
